Bug 59873 - [swrast] piglit ext_framebuffer_multisample-interpolation 0 centroid-edges regression
Summary: [swrast] piglit ext_framebuffer_multisample-interpolation 0 centroid-edges re...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-01-26 00:52 UTC by Vinson Lee
Modified: 2013-01-29 16:06 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2013-01-26 00:52:04 UTC
mesa: c1d35aece0afc2822d6d9f6c22664c04e6fcbba3 (master)

$ ./bin/ext_framebuffer_multisample-interpolation 0 centroid-edges -auto
Probe at (70,86)
  Left: 1.000000 1.000000 1.000000 1.000000
  Right: 0.000000 0.000000 1.000000 1.000000
PIGLIT: {'result': 'fail' }

728bf86a23f6de137c0871ea87b09e75e55468a9 is the first bad commit
commit 728bf86a23f6de137c0871ea87b09e75e55468a9
Author: Brian Paul <brianp@vmware.com>
Date:   Mon Jan 21 08:59:25 2013 -0700

    swrast: move resampleRow setup code in blit_nearest()
    
    The resampleRow setup depends on pixelSize.  For color buffers,
    we don't know the pixelSize until we're in the buffer loop.  Move
    that code inside the loop.
    
    Fixes: http://bugs.freedesktop.org/show_bug.cgi?id=59541
    
    Reviewed-by: José Fonseca <jfonseca@vmware.com>

:040000 040000 ab31ec7b1a500e0d1a18fed21d9aa50e1161e548 bbb140aa5922081d252b2cc4eea6f8ec113c4652 M	src
bisect run success
Comment 1 Brian Paul 2013-01-26 17:13:20 UTC
Actually, the piglit test is broken.  Earlier versions of Mesa/swrast have failed all along.

Patch posted to the piglist list.
Comment 2 Brian Paul 2013-01-29 16:06:58 UTC
With these changes, the test is now skipped:
Mesa commit c80bacba2ed88bccc92ab7a7151e14ad32729249
Piglit commit 038b496e783c34773e5ef561f22ed293fd4ca4fd


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.